--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,6 @@ deploy:
   on:
     condition: "$TRAVIS_OS_NAME = linux"
     tags: true
+before_install:
+- openssl aes-256-cbc -K $encrypted_ec58356001bc_key -iv $encrypted_ec58356001bc_iv
+  -in snap.login.enc -out snap.login -d
