--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,9 @@ deploy:
   skip_cleanup: true
   script: curl -sL https://git.io/goreleaser | bash
   on:
+    branch: "master"
     condition: "$TRAVIS_OS_NAME = linux"
     tags: true
-before_install:
+before_deploy:
 - openssl aes-256-cbc -K $encrypted_ec58356001bc_key -iv $encrypted_ec58356001bc_iv
   -in snap.login.enc -out snap.login -d
